Fix vertical visual alignment of wordrmark and logo

--- a/src/styles/components/LogoType.module.scss
+++ b/src/styles/components/LogoType.module.scss
@@ -18,6 +18,7 @@
 
   &__wordmark {
     // display: none;
+    transform: translateY(-1.5px);
   }
 
   &__planet {
